# arcozelo

./: .gitignore  README.md  flake.nix  package.json  tailwind.config.js
client/: alpine.html
engine/src/: handlers.rs  main.rs
engine/templates/: base.html  card.html  contacts.html  donors.html
src/client/: alpine.html  events.html  index.html  permanent-profile.html  temporary-profile.html
src/client/pages/: events.html  footer.html  home.html  permanent-profile.html  temporary-profile.html
src/client/scripts/: carousel.js  page_loader.js
src/css/: style.css
src/engine/: Cargo.toml  rustfmt.toml
src/engine/migrations/: 0001_doadores.sql  0002_doadores.sql  0003_doadores.sql  0004_doadores.sql
src/engine/src/: card_handler.rs  main.rs  rustfmt.toml
src/engine/src/endpoints/: account_handler.rs  card_handler.rs  donor_events.rs  donor_events_handler.rs  donor_profile.rs  donor_profile_handler.rs  mod.rs
src/engine/src/migrations/: 0001_doadores.sql
src/engine/templates/: base.html  card.html
